# quant-pipeline

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml  quant_pipeline.db  run_pipeline.sh  setup.py
alpha_models/: __init__.py  base_model.py  base_strategy.py  basket_trading.py  buy_and_hold.py  cointegrated_mean_reversion.py  index_rebalancing.py  mean_reversion.py  moving_average_crossover.py  pairs_trading.py  push_response_strategy.py  screening.py  signals.py  trend_following.py
analysis/: performance_analyzer.py  principal_component_analyzer.py  sector_analysis.py  statistical_analyzer.py
backtesting/: backtester.py  events.py  parameter_generator.py  portfolio_backtester.py  risk_manager.py
cli/: run_pipeline.py  run_screener.py  run_strategy.py
config/: settings.py
dashboard_app/: config_manager.py  dashboard.py  database_manager.py  portfolio_manager.py  price_data_handler.py  results_manager.py  watchlist_manager.py
dashboard_app/ui_components/: analysis_tab.py  asset_deep_dive_tab.py  optimization_tab.py  portfolio_tab.py  sidebar.py  statistical_analysis_tab.py  stats_tab.py
data/: watchlists.json
data_pipeline/: base_fetcher.py  crypto_pipeline.py  data_enricher.py  data_pipeline.py  dynamic_universe.py  equity_pipeline.py  fundamental_pipeline.py  pipeline.py  time_series_normalizer.py  universe_fetcher.py  watchlist_manager.py  yfinance_fetcher.py
execution/: simulated_handler.py
ml_models/: base_model.py  eda.py  model_training.py  option_pricing.py  signal_generation.py
modeling/: dcf_model.py
notebooks/: 01_data_collection_and_cleaning.ipynb  02_alpha_research.ipynb
optimization/: portfolio_optimizer.py
portfolio/: construction.py  risk_manager.py
quant_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
screeners/: base_screener.py  fundamental_screener.py  low_volatility_screener.py  momentum.py  momentum_screener.py  screener_pipeline.py
scripts/: constituents.py  crypto_meta.py  init_db.py
tests/: __main__.py  test_dynamic_universe.py  test_pca_analyzer.py  test_pipeline_orchestrator.py  test_sidebar.py  test_universe_fetcher.py
